--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 90vh;
-    background-color: #F8C8DC;
+    background-color: #F4EBD0;
 }
 
 #noButton {
@@ -50,10 +50,60 @@ body {
     transition: background-color 0.3s ease;
 }
 
+.buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .gif_container {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.noTask{
+    width: 100px;
+    height: 60px;
+    margin-right: 100px;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.bikeContainer {
+    /* width: 150px;
+    height: 150px; */
+    width: 15px;
+    height: 15px;
+    position: absolute;
+    top: 20%;
+    position: absolute;
+    -webkit-animation: linear infinite;
+    -webkit-animation-name: run;
+    -webkit-animation-duration: 10s;
+}
+
+@-webkit-keyframes run {
+    0% {
+        right: 0%;
+    }
+
+    50% {
+        right: 50%;
+    }
+
+    100% {
+        right: 110%;
+    }
+}
+
+.bikeImage {
+    width: 100%;
+    height: 100%;
+    /* mix-blend-mode: color-burn; */
+    border-radius: 100px;
+    /* -webkit-transform: scaleX(-1); */
+    /* transform: scaleX(-1); */
 }
 
 @media only screen and (max-width: 320px) and (max-height: 568px) {
